# ChangeLog for www-apache/mod_ftpd
# Copyright 2000-2007 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/www-apache/mod_ftpd/ChangeLog,v 1.4 2007/12/31 11:51:59 hollow Exp $

  31 Dec 2007; Benedikt Böhm <hollow@gentoo.org>
  files/0.14-r1/45_mod_ftpd.conf, -files/45_mod_ftpd.conf,
  -mod_ftpd-0.14.ebuild:
  cleanup

*mod_ftpd-0.14-r1 (21 Sep 2007)

  21 Sep 2007; Benedikt Böhm <hollow@gentoo.org>
  +files/0.14-r1/45_mod_ftpd.conf, -mod_ftpd-0.13.0.ebuild,
  -mod_ftpd-0.13.1.ebuild, +mod_ftpd-0.14-r1.ebuild:
  fix #192862, cleanup

  29 Jul 2007; Christian Heim <phreak@gentoo.org> +files/45_mod_ftpd.conf,
  +metadata.xml, +mod_ftpd-0.13.0.ebuild, +mod_ftpd-0.13.1.ebuild,
  +mod_ftpd-0.14.ebuild:
  Moving net-www/mod_ftpd to www-apache/mod_ftpd (#81244).

*mod_ftpd-0.14 (28 Jan 2007)

  28 Jan 2007; Christian Heim <phreak@gentoo.org> +mod_ftpd-0.14.ebuild:
  Yet another version bump.

  25 Jan 2007; Luca Longinotti <chtekk@gentoo.org> mod_ftpd-0.13.1.ebuild:
  Cleanup.

*mod_ftpd-0.13.1 (25 Jan 2007)

  25 Jan 2007; Christian Heim <phreak@gentoo.org> +mod_ftpd-0.13.1.ebuild:
  Version bump (thanks to Momsen Reincke <mreincke at gmx.net> in 163499),
  fixing the compile time bug when dev-libs/apr{,util} is being compiled with
  LDFLAGS="-Wl,--as-needed".

  14 Jan 2007; Luca Longinotti <chtekk@gentoo.org>
  -files/0.12.3-mod_ftpd-ipv6.patch, -files/mod_ftpd.conf,
  mod_ftpd-0.13.0.ebuild:
  Cleanup, fix deps.

  04 Jun 2006; Michael Stewart <vericgar@gentoo.org>
  -mod_ftpd-0.12.3.ebuild:
  Remove old-style ebuilds

  04 Jun 2006; Michael Stewart <vericgar@gentoo.org> mod_ftpd-0.13.0.ebuild:
  Address dependency issues caused by depend.apache. Refer to bug 107127.

  26 Dec 2005; Joseph Jezak <josejx@gentoo.org> mod_ftpd-0.13.0.ebuild:
  Marked ~ppc for bug #116721.

  18 Sep 2005; Michael Stewart <vericgar@gentoo.org> mod_ftpd-0.13.0.ebuild:
  Stable on x86

*mod_ftpd-0.13.0 (30 Jan 2005)
