@@ -1,8 +1,18 @@
+-----BEGIN PGP SIGNED MESSAGE-----
+Hash: SHA1
+
 AUX 1.2-content-length.patch 1111 RMD160 8cbb1bdbfd7993f2a41d0b3cb9785da530990e0f SHA1 86684c7eff004f3b61adf48841a827b925090d52 SHA256 1222bc5fcfeeac7d38ab2c487ac13a41cfede5a1585419b04e66bb2b5abcae03
-AUX 10_mod_lisp2.conf 255 RMD160 c785d4a4f77ff1c8ca9d5c4602e1385785635658 SHA1 ad1d0c12622f96b686e93e6e8011cae30f2382ed SHA256 7db6201de80e74f027e8b3f99f857eca0e8daaeb0c490b25b7cfcdac56281b50
+AUX 10_mod_lisp2.conf 202 RMD160 856a4b428da880c6d9d0d3e426e7e4a42266afa3 SHA1 5de2218193bdfe1dd0407ca11f101b55b461e4c4 SHA256 88d0ffc40657264a9b4a1644bc41d84000077e53020da42d12055cad06bd6987
 DIST mod_lisp2-1.2.c 24379 RMD160 ee759550b31c5214a14a7ceaae0188aaffdb3c39 SHA1 16adf241d008f06b59a1933e173d4f1e9039447b SHA256 a1e71ac6b3a47a9de9fee7e8e6bd238989cbe3ed859ae9bb189de57f9596a165
 DIST mod_lisp2-1.3.1.c 27718 RMD160 def53a463ff5af70655caba1d52fc82ad87d0017 SHA1 72ac6d91f2b7d498db54ce75f9c637e0b0d6f0db SHA256 2d473d9f539c55aa8c14e35c4bc32044a1668f01fc629f539b04bc062569b587
 EBUILD mod_lisp2-1.2.ebuild 800 RMD160 1d87b21848510985893f3a069367c8de629ac7e4 SHA1 8f52534650f0ebcf5154b25dcd7428e414bef8d7 SHA256 6e67a8a87a3a8a2ab9b1c0d2fcc4b23aaf20e1bfae204ad1df9310c6d0e07c7b
 EBUILD mod_lisp2-1.3.1.ebuild 743 RMD160 bc4d4d7f7f48ddd655ed7befc350a4e5575290c0 SHA1 9fd6c21e7237c4a647b8edb1fe75896aed3f3c96 SHA256 51275567bf9ceb1f57ff3d791e50f26dccccb747fb2a1cfb4d3f6130ae29b532
-MISC ChangeLog 1064 RMD160 8366eed92e50c22d7ee8349fbdaddf69d9b78ff3 SHA1 6fc18deb47a3e20f18c4bf4b89ae235f292d7713 SHA256 db5e98c5b597b9e0e117df21be421c6aa6d7750b92b5e02a7c5ddcc875827a43
-MISC metadata.xml 257 RMD160 b84262cb1e4601964a688fde5eb9a214e06d012d SHA1 15f02a2302d1fe9c5c9791eaa9c68b45bc6bff26 SHA256 87d1b2e598ff49f389c78af65378c9f93a5bf0a8af585469149c037b5ca4d0f9
+MISC ChangeLog 1183 RMD160 16a24d5c3d23d472eea20c163247fdeb30db8f08 SHA1 34e7f529f0da3fe504ca985ee976400c3a4c2ab6 SHA256 33877e29a14cb92c749d105ca7aef0b7fcb07a227cf12d7b2f3e62b89e1e6f40
+MISC metadata.xml 186 RMD160 095d852c62ba96b10af9ca3a1d2e5b1221e5f2d4 SHA1 052507fe539cc9da5054bd1159fc38911eb60e3a SHA256 cd8474f233b8c63b5ac96343527f144c67e5eb5fa6e4707f82f0b20ab569d8ca
+-----BEGIN PGP SIGNATURE-----
+Version: GnuPG v2.0.8 (GNU/Linux)
+
+iEYEARECAAYFAkeiGXoACgkQmPFBzbX68WHnZQCglZeMfC/EezMhMXQjpG966iKu
+6XYAnjilX1BDDywuW7tFVN++0BhDqTuA
+=adTS
+-----END PGP SIGNATURE-----
