@@ -1,6 +1,10 @@
 # ChangeLog for www-apache/mod_ftpd
-# Copyright 2000-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/www-apache/mod_ftpd/ChangeLog,v 1.4 2007/12/31 11:51:59 hollow Exp $
+# Copyright 2000-2008 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/www-apache/mod_ftpd/ChangeLog,v 1.5 2008/01/31 18:51:38 hollow Exp $
+
+  31 Jan 2008; Benedikt Böhm <hollow@gentoo.org> metadata.xml,
+  mod_ftpd-0.14-r1.ebuild:
+  fix depend.apache usage wrt #208033; update metadata
 
   31 Dec 2007; Benedikt Böhm <hollow@gentoo.org>
   files/0.14-r1/45_mod_ftpd.conf, -files/45_mod_ftpd.conf,
